<resources>
    <string name="app_name">Medical Book</string>
    <string name="button_daily_record">Daily Records</string>
    <string name="button_yoga_instructor">Yoga Guide</string>
    <string name="button_nearest_hospital">Find hospital</string>
    <string name="button_bus_service">Bus to go to hospital</string>
    <string name="button_food">Healthy Food Options</string>
    <string name="button_safe_entry">Safe Entry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
...
